<resources>
    <!--Startskärmen-->
    <string name="app_name">Granne</string>
    <string name="logInPage">LogIn</string>"
    <string name="change_Language">Change Language</string>
    <string name="create_Account">Create account</string>
    <string name="login">Login</string>
    <string name="spinner">Select Language</string>
    <string name="language_selected">Language already selected!</string>
    <!--Logga in aktivitet-->
    <string name="login_Username">Username</string>
    <string name="login_Password">Password</string>
    <string name="Keep_logged_in">Keep me logged in</string>
    <string name="Login">Login</string>
    <string name="loggedin">Logged In</string>
    <string name="fail_to_log">Email does not exist or is badly written</string>
    <string name="entermail">Please enter your email address!</string>
    <string name="sentmail">Email successfully sent to reset your password.</string>
    <!--Skapa konto aktivitet-->
    <string name="create_Nickname">Nickname</string>
    <string name="create_Username">Username</string>
    <string name="create_email">Email</string>
    <string name="create_Password">Password</string>
    <string name="Phone_number">Phone number</string>
    <string name="Code">Code</string>
    <string name="Tell_us_about_yourself">Tell us about yourself</string>
    <string name="Create_account">Create account</string>
    <string name="accept_tos">You must accept Terms of Service</string>
    <string name="nickname_6char">Nickname must be longer than 6 characters</string>
    <string name="pass_6char">Password and Nickname must be longer than 6 characters</string>
    <string name="empty">Empty form!!</string>
    <string name="success_create">Successfully created account</string>
    <string name="fail_login">Email already in use or badly written!</string>
    <string name="tos_agree">I agree to the terms of service</string>
    <!--Hemskärmen-->
    <string name="Find_Match">Find Match</string>
    <string name="Options">Options</string>
    <string name="Info">Info</string>
    <string name="Stats">Stats</string>
    <string name="Chat">Chat</string>
    <string name="active_match">Active matches with:</string>
    <string name="no_active_match">No matches found</string>
    <string name="aboutme">About me</string>
    <string name="account_overv">Account Overview</string>

    <!--Find Match-->
    <string name="My_Interests">My interests</string>
    <string name="Search_Match">Search match</string>
    <string name="add_interests">Add your interests before searching!</string>
    <string name="addtochat">Added to chat list!</string>
    <!--StatsFragment-->
    <!--<string name="statistics"><u>Category Chart</u></string>
    <string name="stats_overview"><u>Personal Statistics</u></string>-->
    <!--Settingsmeny-->
    <string name="Settings">Settings</string>
    <string name="Username...">Username...</string>
    <string name="Password...">Password...</string>
    <string name="ApplyUsername">Apply</string>
    <string name="ApplyPassword">Apply</string>
    <string name="Change_username">Change username:</string>
    <string name="Change_password">Change password:</string>
    <string name="Change_location">Change location:</string>
    <string name="ApplyPicture">Apply picture</string>
    <string name="BrowsePictures">Browse pictures</string>
    <string name="Change_profile_picture">Change profile picture:</string>
    <!--chat_list_activity-->
    <string name="nochat">You have no active chats!</string>
    <string name="msgsent">Message Sent</string>

    <!--stats_dialog_fragment-->
    <string name="stats_overview">Stats overview</string>
    <string name="TotalMatches">Totalt matches</string>
    <string name="ThumbsUp">Thumbs up</string>
    <string name="statistics">Statistics</string>

    <!--Settings dropdown locations-->
    <string name="spinner_location">SpinnerInKotlin</string>
    <string name="selected_item">Selected item:</string>
    <string name="newuser">Please enter a new username!</string>
    <string name="namechanged">Nickname changed!</string>
    <string name="locationchanged">Updated location!</string>
    <string name="accdeleted">Account deleted!</string>
    <string name="updatelist">Updated interest list</string>
    <string name="max6">Max 6 interests allowed!</string>
    <string name="min1">Please select at least 1 interest!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_this_app">About this app</string>
    <string name="aboutThisAppText">Granne is an app that makes it possible for you as an older person to find people who share the same interests as you.</string>
    <string name="how_work">How does it work?</string>
    <string name="how_work_text1"> The app uses data from your account to find similarities with other people. This process happens inside the Find Match window.</string>
    <string name="how_work_text2">However you will not be shown to other users until you have entered your interests.</string>


    <string name="friendzone_always_strives_to_improve_the_service_and_give_you_more_features_that_are_interesting_and_useful_to_you_this_means_that_from_time_to_time_we_may_add_new_product_features_or_make_improvements_and_even_remove_certain_features_and_if_these_actions_do_not_significantly_affect_your_rights_or_obligations_we_may_not_notify_you_before_implementing_them">Friendzone always strives to improve the service and give you more features that are interesting and useful to you this means that from time to time we may add new product features or make improvements and even remove certain features and if these actions do not significantly affect your rights or obligations we may not notify you before implementing them</string>
    <string name="you_can_terminate_your_account_at_any_time_for_any_reason">You can terminate your account at any time for any reason</string>
    <string name="you_must_be_at_least_18_years_old_to_create_an_account_on_friendzone_and_use_the_service">You must be at least 18 years old to create an account on friendzone and use the service</string>
    <string name="by_creating_a_friendzone_account_or_using_the_app_via_a_mobile_device_mobile_application_or_computer_you_agree_that_you_are_bound_by_these_terms_of_use_we_may_from_time_to_time_make_changes_to_this_agreement_and_the_service_we_can_do_this_for_a_variety_of_reasons_reflecting_changes_in_or_legal_requirements_new_features_or_changes_in_business_practices">By creating a Friendzone account or using the app via a mobile device mobile application or computer you agree that you are bound by these terms of use we may from time to time make changes to this agreement and the service we can do this for a variety of reasons reflecting_changes in or legal requirements new features or changes in business practices</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="agree">agree</string>
    <string name="cancel">cancel</string>
    <string name="register">Register</string>

</resources>