<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomDialogFragment"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/about_this_app"
        android:textColor="@color/colorButton"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="How does it work?"
        android:textColor="@color/colorButton"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:text="@string/aboutThisAppText"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/how_work_text1"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/how_work_text2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageButton
        android:id="@+id/cancelBtn"
        android:layout_width="34dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
